<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/user_icon"
            android:title="@string/menu_profil" />
        <item
            android:id="@+id/nav_tests"
            android:icon="@drawable/ic_action_name"
            android:title="@string/menu_tests" />
        <item
            android:id="@+id/nav_teoria"
            android:icon="@drawable/ic_teory"
            android:title="@string/menu_teory" />
        <item
            android:id="@+id/nav_konfiguracia"
            android:icon="@drawable/ic_configuration"
            android:title="@string/menu_configurations" />
    </group>
</menu>