<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.testy.TestyFragment">


    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="8pt"
        android:layout_weight="8"
        android:alignmentMode="alignMargins"
        android:columnCount="1"
        android:columnOrderPreserved="false"
        android:padding="4pt"
        android:rowCount="3"
       >

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginTop="15pt"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_marginBottom="20pt"
            android:layout_marginLeft="7pt"
            android:layout_marginRight="7pt"
            app:cardElevation="15dp"
            app:cardCornerRadius="10dp"
            android:layout_gravity="fill"
            android:onClick="OpenTemy1"
            tools:ignore="OnClick">


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/imageView23"
                    android:layout_width="85dp"
                    android:layout_height="85dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="40dp"
                    android:layout_marginBottom="30dp"
                    android:src="@drawable/exam_icon"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="123dp"
                    android:layout_height="19dp"
                    android:layout_marginTop="90dp"
                    android:layout_marginEnd="5dp"
                    android:layout_marginBottom="5dp"
                    android:fontFamily="@font/roboto"
                    android:text="Počet modulov: 6"
                    android:textColor="@color/colorPrimary"
                    android:textSize="15dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="1.0" />

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="100pt"
                    android:layout_height="18pt"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="2dp"
                    android:fontFamily="@font/roboto"
                    android:text="@string/ccna1"
                    android:textAlignment="center"
                    android:textColor="@color/colorPrimary"
                    android:textSize="28dp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toTopOf="@+id/imageView23"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textView19"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="23dp"
                    android:text="Úvod do sietí"
                    android:textSize="14dp"
                    app:layout_constraintBottom_toTopOf="@+id/textView8"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/imageView23"
                    app:layout_constraintTop_toBottomOf="@+id/textView7" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_marginBottom="20pt"
            android:layout_marginLeft="7pt"
            android:layout_marginRight="7pt"
            app:cardElevation="15dp"
            app:cardCornerRadius="10dp"
            android:layout_gravity="fill"
            android:onClick="OpenTemy2"
            tools:ignore="OnClick">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textView20"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="23dp"
                    android:text="Prepínače, smerovače a bezdrôtové pripojenie"
                    app:layout_constraintBottom_toTopOf="@+id/textView10"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toEndOf="@+id/imageView12"
                    app:layout_constraintTop_toBottomOf="@+id/textView9" />

                <ImageView
                    android:id="@+id/imageView12"
                    android:layout_width="85dp"
                    android:layout_height="85dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="40dp"
                    android:layout_marginBottom="30dp"
                    android:src="@drawable/exam_icon"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="100pt"
                    android:layout_height="18pt"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="2dp"
                    android:fontFamily="@font/roboto"
                    android:text="@string/ccna2"
                    android:textAlignment="center"
                    android:textColor="@color/colorPrimary"
                    android:textSize="28dp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toTopOf="@+id/imageView12"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textView10"
                    android:layout_width="123dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="90dp"
                    android:layout_marginEnd="5dp"
                    android:layout_marginBottom="5dp"
                    android:fontFamily="@font/roboto"
                    android:text="Počet modulov: 5"
                    android:textColor="@color/colorPrimary"
                    android:textSize="15dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="1.0" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_marginBottom="20pt"
            android:layout_marginLeft="7pt"
            android:layout_marginRight="7pt"
            app:cardElevation="15dp"
            android:layout_gravity="fill"
            app:cardCornerRadius="10dp"
            android:onClick="OpenTemy3"
            tools:ignore="OnClick">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textView21"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="Podnikové siete, zabezpečenie a automatizácia"
                    app:layout_constraintBottom_toTopOf="@+id/textView12"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toEndOf="@+id/imageView13"
                    app:layout_constraintTop_toBottomOf="@+id/textView11" />

                <ImageView
                    android:id="@+id/imageView13"
                    android:layout_width="85dp"
                    android:layout_height="85dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="40dp"
                    android:layout_marginBottom="30dp"
                    android:src="@drawable/exam_icon"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textView12"
                    android:layout_width="123dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="90dp"
                    android:layout_marginEnd="5dp"
                    android:layout_marginBottom="5dp"
                    android:fontFamily="@font/roboto"
                    android:text="Počet modulov: 5"
                    android:textColor="@color/colorPrimary"
                    android:textSize="15dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="1.0" />

                <TextView
                    android:id="@+id/textView11"
                    android:layout_width="100pt"
                    android:layout_height="18pt"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="2dp"
                    android:fontFamily="@font/roboto"
                    android:text="@string/ccna3"
                    android:textAlignment="center"
                    android:textColor="@color/colorPrimary"
                    android:textSize="28dp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>


    </GridLayout>

</androidx.constraintlayout.widget.ConstraintLayout>